[T11-02][T11-03] 거래 기록 저장소와 수익률
컴퓨터를 꺼도 남아야 하는 것이 있다 — 거래 내역과 실현 손익. 원장(C)은 메모리에만
있어서 다시 뜨면 계좌가 사라지므로, 기록은 프로세스보다 오래 사는 자리에 둬야 한다.

파일 하나짜리 SQLite다. 클라우드 DB(Supabase 등)를 쓰지 않은 이유는 체결 한 건마다
네트워크 왕복이 생겨 이 프로젝트가 재려는 마이크로초 단위 집행 품질과 어긋나기
때문이다. 실제 증권사도 매칭·원장은 메모리에서 돌리고 기록은 따로 남긴다.

- 표는 둘뿐이다: 가입자와 체결. **보유·평균 단가·현금·수익률은 저장하지 않고
  체결을 되짚어 계산한다** — 두 군데 적으면 언젠가 어긋나고 그때 어느 쪽이
  맞는지 알 방법이 없다
- 같은 체결을 두 번 적지 않는다(유일 인덱스). 주문 응답과 주기 작업이 같은
  체결을 본다
- 통화를 섞지 않는다. 국내는 원, 미국은 센트라 더하면 1억 원과 100만 달러가
  같은 수가 된다
- 로그인할 때 기록을 되짚어 예수금·보유를 원장에 실어 준다. **미체결은 되살리지
  않는다** — 꺼져 있던 동안 그 주문은 어느 시장에도 없었다
- users.json을 SQLite로 옮겼다(있으면 한 번 옮겨 담는다). 백업할 파일이 하나가 된다
- GET /api/portfolio(보유·평가손익·실현손익·수익률), GET /api/history(체결 내역)

평가 손익은 **마지막으로 본 시세 기준**이다. 꺼져 있는 동안 시세를 받는 프로세스가
없으므로 그 사이 변동은 반영되지 않는다. 시세를 모르면 0원이 아니라 0으로 둔다.

테스트: Java 105개(98 -> 105). 평균 단가·실현 손익, 다 팔면 원가가 0인 것,
통화 분리, 중복 체결 무시, 다시 띄워도 기록이 남는 것.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>